finish template desktop

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>UNADM</title>
+  <title>Huellitas para ti</title>
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -12,51 +12,56 @@
     <header>
       <!--Menu de navegacion-->
       <ul class="myNavBarContainer nav">
-          <img src="img\Ahorro.JPG" class="myLogo">
-        <li><a href="clientes.html">Clientes</a></li>
-        <li><a href="sucursales.html">Sucursales</a></li>
-        <li><a href="#">Asesores</a>
-          <ul>
-            <li><a href="asesorAhorro.html">Asesor de Ahorro</a></li>
-            <li><a href="asesorCuentas.html">Asesor de Cuentas</a></li>
-            <li><a href="asesorSeguros.html">Asesor de Seguros</a></li>
-          </ul>
-        </li>
-        <li><a href="empleados.html">Empleados</a></li>
+          <img src="img\Huellitas.png" class="myLogo">
+        <li><a href="#">Contacto</a></li>
+        <li><a href="#">Galeria</a></li>
+        <li><a href="#">Promociones</a></li>
+        <li><a href="#">Servicios</a></li>
+        <li><a href="#">Inicio</a></li>
       </ul>
     </header>
-    <section class="carouselContainer">
-      <article class="containerPictures">
-         <section>
-          <h1>Financiera Popular de Ahorros y Seguros</h1>
-          <h2>Tu mejor aliado en servicios financieros</h2>
-          <h3>Ofrecemos servicios en todas las comunidades de Guerrero</h3>
-         </section>
-         <section>
-          <img src="img\Guerrero.JPG" class="landingImage">
-         </section>
-      </article>
-    </section>
+    <div class="mainDisplayContainer">
+     <div class="logoBig">
+      <img src="img\HuellitasBig.png" class="bigHuellitas">
+     </div>
+     <div class="infoServices">
+       <h1>Servicios</h1>
+       <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris"</p>
+       <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris"</p>
+
+      </div>
+     <div class="locationPicture">
+      <img src="img\HuellitasOut.png" class="bigHuellitas">
+     </div>
+    </div>
     <!--Figuras descriptivas-->
     <section class="picsContainer">
       <article class="itemDescription">
-        <img class="imgDescription" src="img\Cuenta.JPG" class="myLogo">
-        <p class="descriptionText">Cuentas</p>
+        <img class="imgDescription" src="img\perrito.png" class="myLogo">
+        <p class="descriptionText">Cuidame</p>
       </article>
       <article class="itemDescription">
-        <img class="imgDescription" src="img\Banco.JPG" class="myLogo">
-        <p class="descriptionText">Ahorro</p>
+        <img class="imgDescription" src="img\perrito.png" class="myLogo">
+        <p class="descriptionText">Visitanos, Woof Woof!</p>
       </article>
       <article class="itemDescription">
-        <img class="imgDescription" src="img\Seguro.JPG" class="myLogo">
-        <p class="descriptionText">Seguros</p>
+        <img class="imgDescription" src="img\perrito.png" class="myLogo">
+        <p class="descriptionText">Consienteme</p>
       </article>
     </section>
     <footer>
       <!--Footer-->
-      <p class="footerText">
-        Mariana de San Juan Licona Aguilar. ES162006875 . Desjmariana@nube.unadmexico.mx
-      </p>
+      <div class="footerAddress">
+        <p class="myFooterText">Av Porfirio Díaz #28, Insurgentes San Borja <br> Benito Juárez, 03100 Ciudad de México, CDMX</p>
+      </div>
+      <div class="footerCopyright">
+      <p class="myFooterText">Huellitas para ti. UNADM</p>
+      </div>
+      <div class="footerSocialMedia">
+       <p class="myFooterText">Facebook: HuellitasParaTi<br>
+      Twitter: @HuellitasGrooming</p>
+      </div>
+     
     </footer>
   </main>
 </body>
