--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Huellitas para ti</title>
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/mediaqueries.css">
 </head>
 <body>
   <main>
